--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,10 @@
 /* css styles */
+
+.quarto-title-block .quarto-title-banner {
+  background-image: url(assets/figure3d_no_background_logo.png);
+  background-size: 300px;
+  background-position: left;
+  background-repeat: no-repeat;
+  padding-left: 10px;
+  background-origin: content-box;
+}
