new posts and updates

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* css styles */
 
 .quarto-title-block .quarto-title-banner {
-  background-image: url(assets/rect124075.png);
+  background-image: url(assets/rect124075_noNs.png);
   background-size: 250px;
   background-position: left -35px;
   background-repeat: no-repeat;
